--- a/integration/app/src/main/AndroidManifest.xml
+++ b/integration/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +21,10 @@
             android:name="UMENG_CHANNEL"
             android:value="${ENVIRONMENT}" />
 
+        <activity android:name=".activity.EBFirstActivity" />
+        <activity android:name=".activity.EBSecondActivity" />
+        <activity android:name=".activity.PhotoViewActivity" />
+        <activity android:name=".activity.EBThridActivity"></activity>
     </application>
 
 </manifest>
