--- a/Service/app/src/main/AndroidManifest.xml
+++ b/Service/app/src/main/AndroidManifest.xml
@@ -21,14 +21,15 @@
         <service
             android:name=".MyService"
             android:enabled="true"
-            android:exported="true" />
+            android:exported="true"
+            android:process="com.barry.muti.service" />
 
         <activity android:name=".SecondActivity" />
 
         <service
             android:name=".LeaderService"
             android:enabled="true"
-            android:exported="true" />
+            android:exported="true"/>
         <service
             android:name=".MusicService"
             android:enabled="true"
