--- a/Widget/app/src/main/AndroidManifest.xml
+++ b/Widget/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity android:name=".VideoPlayerActivity" />
         <activity android:name=".VideoViewActivity" />
         <activity android:name=".PhotographyActivity" />
-        <activity android:name=".CustomPhotographyActivity"></activity>
+        <activity android:name=".CustomPhotographyActivity" />
+        <activity android:name=".RecyclerViewActivity"></activity>
     </application>
 
 </manifest>
